--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,11 @@
 
 
-<div class="container" >
+
 <h1>Usuarios</h1>
 
 
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-8 col-md-offset-2">
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
             <div class="panel-heading">
@@ -61,7 +61,7 @@
                                       Actividades que sigue <%=	 x.followed_actividades.count %>
                                     </div>
                                   </div>
-                                  <div class="col-md-2 col-md-offset-2">
+                                  <div class="col-md-3 col-md-offset-2">
                                     <div class="row">
                                       <div id="follow_form" >
                                         <% if current_user.following?(x) %>
@@ -92,14 +92,14 @@
 
 
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-8 col-md-offset-2 ">
 
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a data-toggle="collapse"  href="#collapseThree">
-                  Más Usuarios
+                 Sigue a otros usuarios
                 </a>
               </h4>
             </div>
@@ -128,7 +128,7 @@
                                 Actividades que sigue <%=         user.followed_actividades.count %>
                               </div>
                             </div>
-                            <div class="col-md-2 col-md-offset-2">
+                            <div class="col-md-3 col-md-offset-2">
                               <div class="row">
                                 <div id="follow_form" >
                                   <% if current_user.following?(user) %>
@@ -171,4 +171,3 @@
 
 
 
-</div>
