--- a/app/views/notelimites/home.html.erb
+++ b/app/views/notelimites/home.html.erb
@@ -250,9 +250,12 @@
                     </div>
                 <% end %>
             <% end %>
+
                 <div class="header-description">
-                  <h2 style="font-size: 61px">NoTeLimites te ayudará a conocer México.</h2>
-                  <div class="header-btn"><%= link_to "Comienza a Explorar", new_user_registration_path %></div>
+
+                      <h2 style="font-size: 58px">NoTeLimites te ayudará a conocer México.</h2>
+
+                      <div class="header-btn"><%= link_to "Comienza a Explorar", new_user_registration_path %></div>
                 </div><!-- /header-description -->
 
             <div class="header-features">
@@ -261,9 +264,13 @@
                       <h3> &nbsp; Cuentanos tus intereses</h3>
                       <p>Nostros te recomendamos los mejores lugares a donde ir y las mejores cosas que hacer en México</p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
+                  <div class="table-responsive">
+                    <table class="table">
                       <h3> Dale like en Facebook</h3>
-                      <div class="fb-like-box" data-href="http://www.facebook.com/notelimites" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false" data-width="300px"></div>
+                      <div class="fb-like-box" data-href="http://www.facebook.com/notelimites" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false" data-width="400px"></div>
+                    </table>
+                  </div>
                 </div>
 
 
