--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,8 +4,8 @@
 <h1>Usuarios</h1>
 
 
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+<div class="row ">
+  <div class="col-sm-8 col-xs-12 col-sm-offset-2 col-xs-offset-0 ">
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
             <div class="panel-heading">
@@ -22,14 +22,14 @@
                     <% if @friends .nil? %>
                       <div class="text-center" style="margin: 10px">
                           <%	 if current_user.uid.nil? %>
-                           <p>Intenta conectar tu cuenta con facebook para ver si tienes amigos en NoTeLimites.com </p> <i class="icon-facebook-sign"></i>  <%= link_to "Link con Facebook", user_omniauth_authorize_path(:facebook), class: " btn btn-lg btn-primary" %>
-                           <p>O invita a tus amigos de facebook</p>
+                         <small>  <p>Intenta conectar tu cuenta con facebook para ver si tienes amigos en NoTeLimites.com </p> <i class="icon-facebook-sign"></i>  <%= link_to "Link con Facebook", user_omniauth_authorize_path(:facebook), class: " btn btn-lg btn-primary" %>
+                           <p>O invita a tus amigos de facebook</p>                                                 </small>
 
-                            <div class="col-md-offset-4 col-md-4">
+                            <div class="col-xs-offset-4 col-xs-4">
 
                           <%	 else %>
 
-                          <p> No hay amigos que mostrar. Como quiera puedes seguir a usuarios destacados </p>
+                            <small> <p> No hay amigos que mostrar. Como quiera puedes seguir a usuarios destacados </p>    </small>
                           <%	 end %>
                       </div>
                     <% else  %>
@@ -42,7 +42,7 @@
                             <%	 else %>
 
                                 <div class="row wrapusers" >
-                                  <div class="col-md-2">
+                                  <div class="col-xs-2    col-sm-2">
                                     <% if x.photo_file_name.blank?  %>
                                         <% if x.avatar.blank?  %>
                                             <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico", :size => "100x50" ), x %>
@@ -53,7 +53,7 @@
                                         <%= link_to image_tag(x.photo.url(:square), class: "avatarchico", :size => "100x50" ), x %>
                                     <%	 end %>
                                   </div>
-                                  <div class="col-md-4">
+                                  <div class="col-xs-8 col-sm-5 ">
                                     <div class="row">
                                       <%=	link_to x.name, x %>
                                     </div>
@@ -61,17 +61,30 @@
                                       Actividades que sigue <%=	 x.followed_actividades.count %>
                                     </div>
                                   </div>
-                                  <div class="col-md-3 col-md-offset-2">
+                                  <div class="col-sm-3">
                                     <div class="row">
                                       <div id="follow_form" >
-                                        <% if current_user.following?(x) %>
-                                            <%= form_for(current_user.relationships.find_by(followed_id: x), html: { method: :delete })  do |f| %>
-                                                <%= f.submit "No seguir", class: " btn btn-primary" %>
+                                        <% if current_user.following?(user) %>
+                                            <%= form_for(current_user.relationships.find_by(followed_id: user), html: { method: :delete })  do |f| %>
+                                                <%= f.submit "No seguir", class: "hidden-xs hidden-sm btn btn-primary" %>
+
+
+                                                <%= button_tag(:type => 'submit', :class => ' hidden-md hidden-lg btn btn-primary') do %>
+                                                    <i class="glyphicon glyphicon-remove"></i>
+                                                <% end %>
+
                                             <% end %>
                                         <% else %>
-                                            <%= form_for(current_user.relationships.build(followed_id: x.id)) do |f| %>
+                                            <%= form_for(current_user.relationships.build(followed_id: user.id)) do |f| %>
                                                 <div><%= f.hidden_field :followed_id %></div>
-                                                <%= f.submit  "Seguir", class: "btn " %>
+                                                <%= f.submit  "Seguir", class: "hidden-xs hidden-sm btn" %>
+
+
+                                                <%= button_tag(:type => 'submit', :class => 'hidden-md hidden-lg btn') do %>
+                                                    <i class="glyphicon glyphicon-ok"></i>
+                                                <% end %>
+
+
                                             <% end %>
                                         <% end %>
                                       </div>
@@ -91,8 +104,8 @@
   </div>
 
 
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2 ">
+  <div class="row ">
+    <div class="col-sm-8 col-xs-12 col-sm-offset-2 col-xs-offset-0 ">
 
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
@@ -109,7 +122,7 @@
                   <%    @users.each do |user|          %>
 
                           <div class="row wrapusers" >
-                            <div class="col-md-2">
+                            <div class="col-xs-4    col-sm-2">
                               <% if user.photo_file_name.blank?  %>
                                   <% if user.avatar.blank?  %>
                                       <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico", width: "100x100"), user %>
@@ -120,31 +133,55 @@
                                   <%= link_to image_tag(user.photo.url(:square), class: "avatarchico", width: "100x100"), user  %>
                               <%         end %>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-5 col-sm-5 ">
                               <div class="row">
-                                <%=        link_to user.name, user %>
+                             <small>   <%=        link_to user.name, user %>  </small>
                               </div>
-                              <div class="row">
-                                Actividades que sigue <%=         user.followed_actividades.count %>
+                              <div class="row hidden-xs">
+                                <small>   Actividades que sigue <%=         user.followed_actividades.count %>     </small>
                               </div>
+
                             </div>
-                            <div class="col-md-3 col-md-offset-2">
+                            <div class="col-sm-3 col-xs-3">
                               <div class="row">
                                 <div id="follow_form" >
                                   <% if current_user.following?(user) %>
                                       <%= form_for(current_user.relationships.find_by(followed_id: user), html: { method: :delete })  do |f| %>
-                                          <%= f.submit "No seguir", class: " btn btn-primary" %>
+                                          <%= f.submit "No seguir", class: "hidden-xs hidden-sm btn btn-primary" %>
+
+
+                                          <%= button_tag(:type => 'submit', :class => ' hidden-md hidden-lg btn btn-primary') do %>
+                                               <i class="glyphicon glyphicon-remove"></i>
+                                          <% end %>
+
                                       <% end %>
                                   <% else %>
                                       <%= form_for(current_user.relationships.build(followed_id: user.id)) do |f| %>
                                           <div><%= f.hidden_field :followed_id %></div>
-                                          <%= f.submit  "Seguir", class: "btn " %>
+                                          <%= f.submit  "Seguir", class: "hidden-xs hidden-sm btn" %>
+
+
+                                          <%= button_tag(:type => 'submit', :class => 'hidden-md hidden-lg btn') do %>
+                                              <i class="glyphicon glyphicon-ok"></i>
+                                          <% end %>
+
+
                                       <% end %>
                                   <% end %>
                                 </div>
                               </div>
+
                             </div>
+
                           </div>
+                          <div class="row">
+                            <div class="row col-xs-12 hidden-sm hidden-lg hidden-md">
+                              <small>   Actividades que sigue <%=         user.followed_actividades.count %>     </small>
+                              <hr>
+                            </div>
+
+                          </div>
+
 
 
                   <%  end  %>
