Ya debe de quedar arreglado ahora si

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -58,7 +58,7 @@
                                   <%=	link_to x.name, x %>
                                 </div>
                                 <div class="row hidden-xs">
-                                  <small>   Actividades que sigue <%=         user.followed_actividades.count %>     </small>
+                                  <small>   Actividades que sigue <%=         x.followed_actividades.count %>     </small>
                                 </div>
                               </div>
                               <div class="col-sm-3 col-xs-3">
