Arreglando Home - Random actividades y users

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,11 @@
  * * http://fortawesome.github.com/Font-Awesome/
  **/
 
+.nomargin{
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
 #help{
 }
 
