--- a/app/views/notelimites/home.html.erb
+++ b/app/views/notelimites/home.html.erb
@@ -16,208 +16,19 @@
 <% if signed_in? %>
 
 
+      <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12" style="padding: 0px; padding-left: -10px">
+       <%=	 render 'shared/actividades' %>
 
-<div class="row">
+      </div>
 
-</div>
+    <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12"  style="padding: 0px">
 
 
-
-   <div class="col-md-3" style="overflow: scroll">
-     <div class="row">
-       <h2 style="text-align: center">Micrositios</h2>
-     </div>
-      <% @micrositios.take(10).each do |estado| %>
-
-          <div class="thumbnail seleccionado" style="margin: 0px">
-            <div >
-              <% if estado.photo_file_size? %>
-                  <%= image_tag estado.photo.url(:big), class: "img-responsive", alt: "responsive image" %>
-              <% else %>
-                  <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= estado.photo_file_name %>" class="img-responsive" alt="Responsive image">
-              <% end %>
-            </div>
-            <div class="caption">
-              <h3><%= link_to estado.name, estado %> </h3>
-              <div class="row">
-                <div class="col-md-3">
-                  <% if estado.user.photo_file_name.blank?  %>
-                      <% if estado.user.avatar.blank?  %>
-                          <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico"), estado.user %>
-                      <%	 else %>
-                          <%= link_to image_tag(estado.user.avatar, class: "avatarchico" ), estado.user %>
-                      <% end %>
-                  <% else %>
-                      <%= link_to image_tag(estado.user.photo.url(:square), class: "avatarchico"), estado.user %>
-                  <%	 end %>
-                </div>
-                <div class="col-md-9">
-                  <%= link_to estado.user.name , estado.user %>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12">
-                  <p>
-                  <div class="descripcionmicrositios">   <%=  estado.descripcion  %>  </div>
-                  </p>
-                </div>
-              </div>
-              <div class="row " style="margin-bottom: 10px; font-weight: bold">
-                <div class="col-md-6 col-md-offset-6">
-                  <%=	 link_to "Ver más -->", estado %>
-                </div>
-              </div>
-              <div class="row" style="margin-top: 5px">
-                <div class="col-md-6">
-                  <div id="follow_form" >
-                    <% if current_user.followingestado?(estado) %>
-                        <%= form_for(current_user.relationestados.find_by(followed_id: estado), html: { method: :delete }) do |f| %>
-                            <%= f.submit "Siguiendo", class: "btn " %>
-                        <% end %>
-                    <% else %>
-                        <%= form_for(current_user.relationestados.build(followed_id: estado.id)) do |f| %>
-                            <div><%= f.hidden_field :followed_id %></div>
-                            <%= f.submit "Seguir", class: "btn  btn-primary" %>
-                        <% end %>
-                    <% end %>
-                  </div>
-                </div>
-                <div class="col-md-4 estadocontador">
-                  <%= estado.followers.count%>
-                  Usuarios lo siguen
-                </div>
-
-              </div>
-            </div>
-          </div>
-
-      <% end %>
-   </div>
-  <div class="col-md-3">
-    <div class="row">
-      <h2 style="text-align: center">Eventos</h2>
+      <%=	 render 'shared/micrositios' %>
     </div>
-    <% @eventos.take(10).each do |estado| %>
 
-        <div class="thumbnail seleccionado" style="margin: 0px">
-          <div >
-            <% if estado.photo_file_size? %>
-                <%= image_tag estado.photo.url(:big), class: "img-responsive", alt: "responsive image" %>
-            <% else %>
-                <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= estado.photo_file_name %>" class="img-responsive" alt="Responsive image">
-            <% end %>
-          </div>
-          <div class="caption">
-            <h3><%= link_to estado.nombre, estado %> </h3>
-            <div class="row">
-              <div class="col-md-3">
-                <% if estado.user.photo_file_name.blank?  %>
-                    <% if estado.user.avatar.blank?  %>
-                        <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico"), estado.user %>
-                    <%	 else %>
-                        <%= link_to image_tag(estado.user.avatar, class: "avatarchico" ), estado.user %>
-                    <% end %>
-                <% else %>
-                    <%= link_to image_tag(estado.user.photo.url(:square), class: "avatarchico"), estado.user %>
-                <%	 end %>
-              </div>
-              <div class="col-md-9">
-                <%= link_to estado.user.name , estado %>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <p>
-                <div class="descripcionmicrositios">   <%=  estado.descripcion  %>  </div>
-                </p>
-              </div>
-            </div>
-            <div class="row " style="margin-bottom: 10px; font-weight: bold">
-              <div class="col-md-6 col-md-offset-6">
-                <%=	 link_to "Ver más -->", estado %>
-              </div>
-            </div>
-            <div class="row" style="margin-top: 5px">
-              <div class="col-md-6">
-                <div id="follow_form" >
-                  <% if current_user.followingestado?(estado) %>
-                      <%= form_for(current_user.relationestados.find_by(followed_id: estado), html: { method: :delete }) do |f| %>
-                          <%= f.submit "Siguiendo", class: "btn " %>
-                      <% end %>
-                  <% else %>
-                      <%= form_for(current_user.relationestados.build(followed_id: estado.id)) do |f| %>
-                          <div><%= f.hidden_field :followed_id %></div>
-                          <%= f.submit "Seguir", class: "btn  btn-primary" %>
-                      <% end %>
-                  <% end %>
-                </div>
-              </div>
-              <div class="col-md-4 estadocontador">
-                <%= estado.followers.count%>
-                Usuarios lo siguen
-              </div>
 
-            </div>
-          </div>
-        </div>
 
-    <% end %>
-  </div>
-  <div class="col-md-3">
-    <div class="row">
-      <h2 style="text-align: center">Actividades</h2>
-    </div>
-    <% @actividades.take(30).each do |estado| %>
-
-        <div class="thumbnail seleccionado" style="margin: 0px">
-          <% estado.micrositios.take(1).each do |estado| %>
-              <% if estado.photo_file_size? %>
-                  <%= link_to (image_tag estado.photo.url(:medium)), estado, class: "img-responsive", alt: "responsive image" %>
-                  <div style="font-weight: bold; overflow: hidden"><%= link_to estado.name, estado		  %> </div>
-              <% else %>
-                  <%= link_to (image_tag "https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/#{estado.photo_file_name}"), estado, class: "img-responsive", alt: "responsive image" %>
-                  <div style="font-weight: bold; overflow: hidden"><%= link_to estado.name, estado		  %> </div>
-              <% end %>
-          <% end %>
-
-          <div class="caption">
-             <div style="margin-top: 5px">
-              <h3><%= link_to estado.actividad, estado %> </h3>  <%=	 link_to "Ver más -->", estado %>
-             </div>
-            <div class="row" style="margin-top: 5px">
-              <div class="col-md-6">
-                <div id="follow_form" >
-                  <% if current_user.followingestado?(estado) %>
-                      <%= form_for(current_user.relationestados.find_by(followed_id: estado), html: { method: :delete }) do |f| %>
-                          <%= f.submit "Siguiendo", class: "btn " %>
-                      <% end %>
-                  <% else %>
-                      <%= form_for(current_user.relationestados.build(followed_id: estado.id)) do |f| %>
-                          <div><%= f.hidden_field :followed_id %></div>
-                          <%= f.submit "Seguir", class: "btn  btn-primary" %>
-                      <% end %>
-                  <% end %>
-                </div>
-              </div>
-              <div class="col-md-6 estadocontador">
-                <%= estado.followers.count%>
-                Usuarios lo siguen
-              </div>
-
-            </div>
-          </div>
-        </div>
-
-    <% end %>
-
-  </div>
-   <div class="col-md-3">
-     <div class="row" >
-       <h2 style="text-align: center">Novedades</h2>
-     </div>
-     <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/NTLmx" data-widget-id="387472701780004866">Tweets por @NTLmx</a>
-     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-   </div>
 
 <% else %>
 
