--- a/app/views/notelimites/instrucciones.html.erb
+++ b/app/views/notelimites/instrucciones.html.erb
@@ -50,20 +50,18 @@
 
 
 
-        <%	 if @user.lat.nil? %>
+
               <div class="row">
                 <p>Pero primero actualiza tu ubicacón. Mueve el pin a una ubiación cercana a ti y da click en el boton.</p>
               </div>
               <%= form_for(@user, :html => { :multipart => true }) do |f| %>
                   <div id="map-canvas" class="thumbnail" style="height:200px"></div>
                   <div id="latlong">
-                    <div> <%= f.hidden_field :lat, class: 'input-sm', id: 'latbox' %></div>
-                    <div> <%= f.hidden_field :lng, class: 'input-sm', id: 'lngbox' %></div>
+                    <div> <%= f.text_field :lat, class: 'input-sm', id: 'latbox' %></div>
+                    <div> <%= f.text_field :lng, class: 'input-sm', id: 'lngbox' %></div>
                   </div>
                   <div class="col-md-4 col-md-offset-4" style="margin-bottom: 10px"><%= f.submit "Actualiza tu ubiación", class: 'btn btn-primary' %></div>
               <% end %>
-        <%	 else %>
-        <%	 end %>
 
 
 
