--- a/app/views/notelimites/places.html.erb
+++ b/app/views/notelimites/places.html.erb
@@ -1,5 +1,3 @@
-<h1>New micrositio</h1>
-
 <script>
 
     var map, placesList;
@@ -15,7 +13,7 @@
         var request = {
             location: pyrmont,
             radius: 500,
-            types: ['restaurant']
+            types: ['store']
         };
 
         placesList = document.getElementById('places');
@@ -86,21 +84,11 @@
     <div id="results" class="row">
       <h2>Results</h2>
 
-      <ul > <%= f.text_field :reference, class: 'input-sm', id: 'places' %></ul>
+    <ul > <%= f.text_field :lat, class: 'input-sm', id: 'places' %></ul>
 
       <button id="more">More results</button>
     </div>
 
 
-    <div class="col-md-4 col-md-offset-4" style="margin-bottom: 10px"><%= f.submit "Sube los lugares", class: 'btn btn-primary' %></div>
+    <div class="col-md-4 col-md-offset-4" style="margin-bottom: 10px"><%= f.submit "Actualiza tu ubiación", class: 'btn btn-primary' %></div>
 <% end %>
-
-
-
-
-
-
-
-
-
-
