--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       <div class="row"  style="margin-top: 20px">
         <div class="col-md-4">
           <h6> <a href="http://notelimites.com/">NoTeLimites.com v.1</a> </h6>
-          by Manuel Mendoza
+          by ZWOPA S.A.P.I. de C.V.
         </div>
         <div class="col-md-8">
           <nav >
