--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -25,12 +25,12 @@
       </ul>
 
       <ul class="nav hidden-xs" id="lg-menu" >
-        <li class="active"><i class="glyphicon glyphicon-list-alt"  style="padding: 10px;"><%= link_to " Discover", root_path %></i></li>
-        <li><i class="glyphicon glyphicon-list"  style="padding: 10px;"> <%= link_to "Explore", estados_path %></i></li>
-        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Users", users_path %></i></li>
-        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Activites", actividades_path %></i></li>
-        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Places", micrositios_path %></i></li>
-        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Events", eventos_path %></i></li>
+        <li class="active"><i class="glyphicon glyphicon-list-alt"  style="padding: 10px;"><%= link_to " Descubre", root_path %></i></li>
+        <li><i class="glyphicon glyphicon-list"  style="padding: 10px;"> <%= link_to "Explora", estados_path %></i></li>
+        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Usuarios", users_path %></i></li>
+        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Actividades", actividades_path %></i></li>
+        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Lugares", micrositios_path %></i></li>
+        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Eventos", eventos_path %></i></li>
       </ul>
       <ul class="list-unstyled hidden-xs" id="sidebar-footer">
         <li>
