--- a/app/views/notelimites/home.html.erb
+++ b/app/views/notelimites/home.html.erb
@@ -42,8 +42,8 @@
             <h1><div class="site-title pull-left"> <%= link_to image_tag("LogoNTL.png"), root_path, id: "logo" %></div></h1>
             <div class="user text-right">
               <ul>
-              <li class="user-login" ><%= link_to "Login", new_user_session_path %></li> |
-              <li class="user-regidter" ><%= link_to "Registrate", new_user_registration_path %></li>
+              <li class="user-login" ><%= link_to "Ingresa", new_user_session_path %></li> |
+              <li class="user-regidter" ><%= link_to "Regístrate", new_user_registration_path %></li>
               </ul>
             </div>
           </div><!-- /span12 -->
