--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,11 +40,11 @@
                                   <div> <%= f.text_field :username, :placeholder => "Username", class: 'input-sm' %></div>
                                   <div><%= f.password_field :password, :placeholder => "Password", class: 'input-sm'%></div>
                                   <div> <%= f.password_field :password_confirmation, :placeholder => "Password confirmation", class: 'input-sm' %></div>
-                                  <div><%= f.submit "Registrarte", class: "btn header-btn-form" %></div>
+                                  <div><%= f.submit "Regístrate", class: "btn header-btn-form" %></div>
                               <% end %>
                           <div  style="color: #ffffff; text-align: left;">
                             <p>
-                              Dándole click a "Registrarte" se considera que estás de acuerdo con los Servicios de NoTeLimites. Por favor toma un tiempo para leer los <%= link_to "Terminos y Condiciones.", terminos_path %>
+                              Dándole click a "Regístate" se considera que estás de acuerdo con los Servicios de NoTeLimites. Por favor toma un tiempo para leer los <%= link_to "Terminos y Condiciones.", terminos_path %>
                             </p>
                             <br>
                             <br>
